k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sam-deployment
  labels:
    version: v1
spec:
  # TODO consider changing the replicas number or always overlaying it for different environments.
  replicas: 1
  template:
    metadata:
      name: sam
      labels:
        version: v1
    spec:
      serviceAccountName: sam-sa
      containers:
        - name: sam-service
          image: gcr.io/broad-dsp-gcr-public/sam:0.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # TODO do we want a livenessProbe or a readinessProbe?
          volumeMounts:
            - name: sam-configs
              # TODO need to change rendered sam.conf references to add sam-configs subdir.
              mountPath: /etc/sam-configs
              readOnly: true
        - name: sam-sqlproxy
          image: broadinstitute/cloudsqlproxy:1.11_20180808
          volumeMounts:
            - name: sqlproxy-sa-creds
              mountPath: /etc/sa
              readOnly: true
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
      volumes:
        - name: sam-configs
          secret:
            secretName: sam-configs
        - name: sqlproxy-env
          secret:
            secretName: sqlproxy-env
        - name: sqlproxy-sa-creds
          secret:
            secretName: sqlproxy-sa-creds
