k8s-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sam
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: sam-service
